# c-edit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  input.css  main.cpp  tailwind.config.js
assets/: app.html  script.js  settings.html  stylesheet.css
cmake/: App.cmake
src/: App.cpp  App.h  MyApp.cpp  MyApp.h  ProcessRunner.cpp  ProcessRunner.h  Settings.cpp  Settings.h  input.css  main.cpp
